--- a/front-end/scss/chat.scss
+++ b/front-end/scss/chat.scss
@@ -112,7 +112,7 @@ body, html, .full-height {
             @include hover-effects($sidebar-bg);
         }
 
-        .title {
+        .top-title {
             display: block;
             padding: 1em;
             text-align: center;
