--- a/server/articles/templates/articles/detail.html
+++ b/server/articles/templates/articles/detail.html
@@ -23,8 +23,8 @@
     </li>
 </template>
 
-<div class="container-fluid mt-3">
-    <article class="col-md-8 offset-md-2">
+<div class="container-fluid mt-3 px-0">
+    <article class="col-md-8 offset-md-2 px-0">
         <section class="title">
             <h4 class="mb-0">{{article.title}}</h4>
         </section>
