--- a/server/users/templates/registration/login.html
+++ b/server/users/templates/registration/login.html
@@ -12,12 +12,15 @@
                     {{form|errtext:'username'}}
                 </div>
                 <div class="form-group {{form|errclass:'password'}}">
-                    <label for="password" class="form-control-label">{% trans 'password' %}</label>
+                    <label for="password" class="form-control-label">
+                        {% trans 'password' %}
+                        <small class="text-muted">({% trans 'Forget password? Contact administrator to reset your password' %})</small>
+                    </label>
                     <input type="password" class="form-control" id="password" name="password">
                     {{form|errtext:'password'}}
                 </div>
                 {{form|errtext}}
-                <button class="btn btn-primary">Submit</button>
+                <button class="btn btn-primary d-block w-100">{% trans 'Log in' %}</button>
             </form>
         </div>
     </div>
