--- a/server/notices/templates/notices/list.html
+++ b/server/notices/templates/notices/list.html
@@ -1,8 +1,8 @@
 {% extends "bases/base-with-header.html" %}
 
 {% block content %}
-<div class="container mt-3">
-    <div class="col-lg-10 offset-lg-1">
+<div class="container mt-3 px-0">
+    <div class="col-lg-10 offset-lg-1 px-0">
         <ul class="nav nav-pills h-scroll box">
             {% for item in categories %}
             <li class="nav-item">
