--- a/server/articles/templates/articles/detail.html
+++ b/server/articles/templates/articles/detail.html
@@ -1,5 +1,7 @@
 {% extends "bases/base-with-header.html" %}
 
+{% block title %}{{article.title}}{% endblock %}
+
 {% block content %}
 
 <template id="tmpl-comment-item">
