--- a/server/articles/templates/articles/edit.html
+++ b/server/articles/templates/articles/edit.html
@@ -1,5 +1,7 @@
 {% extends "bases/base-with-header.html" %}
 
+{% block title %}{% trans 'Write' %}{% endblock %}
+
 {% block content %}
 <div class="container mt-3">
     <form id="edit-form" class="box clearfix">
