--- a/server/articles/templates/articles/list.html
+++ b/server/articles/templates/articles/list.html
@@ -1,5 +1,7 @@
 {% extends "bases/base-with-header.html" %}
 
+{% block title %}{% trans 'Articles' %}{% endblock %}
+
 {% block content %}
 
 <template id="tmpl-article-top-nav-single">
