--- a/server/users/templates/registration/login.html
+++ b/server/users/templates/registration/login.html
@@ -1,5 +1,7 @@
 {% extends "bases/base-with-header.html" %}
 
+{% block title %}{% trans 'Log in' %}{% endblock %}
+
 {% block content %}
 <div class="container mt-3">
     <div class="row justify-content-center">
