--- a/server/users/templates/users/profile.html
+++ b/server/users/templates/users/profile.html
@@ -1,5 +1,7 @@
 {% extends "bases/base-with-header.html" %}
 
+{% block title %}{{user_object.nickname}}{% endblock %}
+
 {% block content %}
 <div class="jumbotron bg-inverse text-white">
     <div class="row">
