--- a/server/templates/bases/base.html
+++ b/server/templates/bases/base.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
     <head>
+        <title>{% block title %}{% endblock %} - HSFZMUN</title>
         <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
         <script type="text/javascript" src="/static/requirejs/require.js"></script>
         <script>
