--- a/server/templates/bases/base.html
+++ b/server/templates/bases/base.html
@@ -14,7 +14,7 @@
                 langCode: '{{LANGUAGE_CODE}}'
             }
             define('timeline-config', {{timeline_data|safe}})
-            window.onerror = function (e) {document.write(e)}
+            // window.onerror = function (e) {document.write(e)}
         </script>
         <script type="text/javascript" src="/static/main.js"></script>
         {% block after_scripts %} {% endblock %}
